Fixed search on mobile for WMP outlets

--- a/client/css/bungalow.css
+++ b/client/css/bungalow.css
@@ -616,6 +616,9 @@ sp-bottomtabbar {
 }
 
 @media screen and (max-width: 720pt) {
+    .app-title {
+        display: none !important;
+    }
     sp-bottomtabbar .fa {
         font-size: 2rem !important;
     }
