--- a/client/themes/wmp-9/css/wmp-9.css
+++ b/client/themes/wmp-9/css/wmp-9.css
@@ -52,9 +52,12 @@ sp-mediasidebar {
   background-size: 100% 100%;
  filter: hue-rotate(var(--primary-hue)) saturate(var(--primary-saturation));
 }
+@media screen and (min-width: 720pt) {
 
-sp-appheader sp-searchform {
-  display: none;
+
+    sp-appheader sp-searchform {
+        display: none;
+    }
 }
 .sp-current-track td {
     background: black !important;
